--- a/app/index.html
+++ b/app/index.html
@@ -1,92 +1,80 @@
 <!--#set var="title" value="Meg" -->
 <!--#include virtual="/parts/header.html" -->
 
-	<main class="main">
+<main class="main">
 
-		<div class="search-form">
-			<input type="text" class="myInput search-form__input" placeholder="Search anything...">
-			<button><img src="images/dist/search.svg" alt="search-icon"></button>
-		</div>
+  <div class="main-top">
+    <div class="search-form">
+      <input type="text" class="myInput search-form__input" placeholder="Search anything...">
+      <button><img src="images/dist/search.svg" alt="search-icon"></button>
+    </div>
+  </div>
 
-		<div class="main-body">
+  <div class="main-body">
+    <div class='main-tabs'>
+      <ul class="tab-btns">
+        <li><a href="#tab-1">Men</a></li>
+        <li><a href="#tab-2">Women</a></li>
+      </ul>
+      <div id='tab-1' class="main-content">
+        <div class="main-content__left">
+          <ul class="future-list">
+            <li class="future-list__item"><img src="images/dist/future-icon-1.svg" alt="future-icon">Free Shipping</li>
+            <li class="future-list__item"><img src="images/dist/future-icon-2.svg" alt="future-icon">Secure Payment</li>
+            <li class="future-list__item"><img src="images/dist/future-icon-3.svg" alt="future-icon">24/7 Support</li>
+            <li class="future-list__item"><img src="images/dist/future-icon-4.svg" alt="future-icon">90 Days Return</li>
+          </ul>
+        </div>
+        <div class="main-content__center">
+          <div class="product">
+            <img src="images/dist/shoes1-1.png" alt="product" class="product__img">
+            <div class="product__title">Trend Shoes New 2021</div>
+            <div class="product__desc">Class aptent taciti sociosqu ad litora, torquent per conubia nostra per inceptos himenaeos.</div>
+            <a href="" class="btn">View Collection</a>
+          </div>
+        </div>
+        <div class="main-content__right">
+          <div class="video-block">
+            <div class="video-block__left"><img src="images/dist/play-button.svg" alt="play-btn"></div>
+            <div class="video-block__right">
+              <p class="video-block__title">New Season 2021 Lookbook</p>
+              <p class="video-block__desc">Discover video</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id='tab-2' class="main-content">
+        <div class="main-content__left">
+          <ul class="future-list">
+            <li class="future-list__item"><img src="images/dist/future-icon-1.svg" alt="future-icon">Free Shipping</li>
+            <li class="future-list__item"><img src="images/dist/future-icon-2.svg" alt="future-icon">Secure Payment</li>
+            <li class="future-list__item"><img src="images/dist/future-icon-3.svg" alt="future-icon">24/7 Support</li>
+            <li class="future-list__item"><img src="images/dist/future-icon-4.svg" alt="future-icon">90 Days Return</li>
+          </ul>
+        </div>
+        <div class="main-content__center">
+          <div class="product">
+            <img src="images/dist/shoes2-1.png" alt="product" class="product__img">
+            <div class="product__title">Trend Shoes New 2021</div>
+            <div class="product__desc">Class aptent taciti sociosqu ad litora, torquent per conubia nostra per inceptos himenaeos.</div>
+            <a href="" class="btn">View Collection</a>
+          </div>
+        </div>
+        <div class="main-content__right">
+          <div class="video-block">
+            <div class="video-block__left"><img src="images/dist/play-button.svg" alt="play-btn"></div>
+            <div class="video-block__right">
+              <p class="video-block__title">New Season 2021 Lookbook</p>
+              <p class="video-block__desc">Discover video</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-			<div class='main-tabs'>
-				<ul class="tab-btns">
-					<li><a href="#tab-1">Men</a></li>
-					<li><a href="#tab-2">Women</a></li>
-				</ul>
-				<div id='tab-1' class="main-content">
-					<div class="main-content__left">
-						<ul class="future-list">
-							<li class="future-list__item"><img src="images/dist/future-icon-1.svg" alt="future-icon">Free Shipping</li>
-							<li class="future-list__item"><img src="images/dist/future-icon-2.svg" alt="future-icon">Secure Payment</li>
-							<li class="future-list__item"><img src="images/dist/future-icon-3.svg" alt="future-icon">24/7 Support</li>
-							<li class="future-list__item"><img src="images/dist/future-icon-4.svg" alt="future-icon">90 Days Return</li>
-						</ul>
-					</div>
+  <!--#include virtual="/parts/copyright.html" -->
 
-					<div class="main-content__center">
-						<div class="product">
-							<img src="images/dist/shoes1-1.png" alt="product" class="product__img">
-							<div class="product__title">Trend Shoes New 2021</div>
-              <div class="product__desc">Class aptent taciti sociosqu ad litora, torquent per conubia nostra per inceptos himenaeos.</div>
-              <a href="" class="btn">View Collection</a>
-						</div>
-					</div>
-
-					<div class="main-content__right">
-						<div class="video-block">
-							<div class="video-block__left"><img src="images/dist/play-button.svg" alt="play-btn"></div>
-							<div class="video-block__right">
-								<p class="video-block__title">New Season 2021 Lookbook</p>
-								<p class="video-block__desc">Discover video</p>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div id='tab-2' class="main-content">
-					<div class="main-content__left">
-						<ul class="future-list">
-							<li class="future-list__item"><img src="images/dist/future-icon-1.svg" alt="future-icon">Free Shipping</li>
-							<li class="future-list__item"><img src="images/dist/future-icon-2.svg" alt="future-icon">Secure Payment</li>
-							<li class="future-list__item"><img src="images/dist/future-icon-3.svg" alt="future-icon">24/7 Support</li>
-							<li class="future-list__item"><img src="images/dist/future-icon-4.svg" alt="future-icon">90 Days Return</li>
-						</ul>
-					</div>
-
-					<div class="main-content__center">
-						<div class="product">
-							<img src="images/dist/shoes2-1.png" alt="product" class="product__img">
-							<div class="product__title">Trend Shoes New 2021</div>
-              <div class="product__desc">Class aptent taciti sociosqu ad litora, torquent per conubia nostra per inceptos himenaeos.</div>
-              <a href="" class="btn">View Collection</a>
-						</div>
-					</div>
-
-					<div class="main-content__right">
-						<div class="video-block">
-							<div class="video-block__left"><img src="images/dist/play-button.svg" alt="play-btn"></div>
-							<div class="video-block__right">
-								<p class="video-block__title">New Season 2021 Lookbook</p>
-								<p class="video-block__desc">Discover video</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-		<div class="copyright">
-			<ul class="social-links">
-				<a href="#" class="social-links__item"><i class="fab fa-facebook"></i></a>
-				<a href="#" class="social-links__item"><i class="fab fa-twitter"></i></a>
-				<a href="#" class="social-links__item"><i class="fab fa-instagram"></i></a>
-			</ul>
-			<p class="copyright__text">©Copyright 2021. Made by moontheme</p>
-		</div>
-
-	</main>
+</main>
 
 <!--#include virtual="/parts/footer.html" -->
