--- a/app/store.html
+++ b/app/store.html
@@ -1,9 +1,208 @@
 <!--#include virtual="/parts/header.html" -->
 
-  <main class="main">
+<main class="main">
 
-    store
+  <div class="main-top">
+    <div class="main-top__left">
+      <h1 class="main-top__title">Store</h1>
+      <ul class="menu main-top__menu">
+        <li class="menu__item"><a href="#" class="menu__link">All</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">Men</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">Women</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">Kids</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">Other</a></li>
+      </ul>
+    </div>
+    <div class="search-form">
+      <input type="text" class="myInput search-form__input" placeholder="Search anything...">
+      <button><img src="images/dist/search.svg" alt="search-icon"></button>
+    </div>
+  </div>
 
-  </main>
+  <div class="sort">
+    <div class="sort-left">
+      <a href="#" class="sort-left__link"><img class="sort-left__icon" src="images/dist/boots-icon.svg"/></a>
+      <a href="#" class="sort-left__link"><img class="sort-left__icon" src="images/dist/hat-icon.svg"/></a>
+      <a href="#" class="sort-left__link"><img class="sort-left__icon" src="images/dist/bag-icon.svg"/></a>
+      <a href="#" class="sort-left__link"><img class="sort-left__icon" src="images/dist/sunglasses-icon.svg"/></a>
+    </div>
+    <div class="sort-right">
+      <a href="#" class="btn btn-icon">Sort <img class="svg" src="images/dist/sort.svg"/></a>
+      <a href="#" class="btn btn-icon">Filter <img class="svg" src="images/dist/filter.svg"/></a>
+    </div>
+  </div>
+
+  <div class="swiper-container product">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <div class="swiper-container img-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="product-desc">
+          <div class="product-desc__left">
+            <p class="product__name">Great Hat 2021 for men</p>
+            <p class="product__price">$ 35</p>
+          </div>
+          <div class="product-desc__right">
+            <div class="product-color">
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+            </div>
+            <div class="product-btns">
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="swiper-container img-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="product-desc">
+          <div class="product-desc__left">
+            <p class="product__name">Great Hat 2021 for men</p>
+            <p class="product__price">$ 35</p>
+          </div>
+          <div class="product-desc__right">
+            <div class="product-color">
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+            </div>
+            <div class="product-btns">
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            </div>
+          </div>
+        </div>
+        <div class="sale">-20%</div>
+      </div>
+      <div class="swiper-slide">
+        <div class="swiper-container img-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="product-desc">
+          <div class="product-desc__left">
+            <p class="product__name">Great Hat 2021 for men</p>
+            <p class="product__price">$ 35</p>
+          </div>
+          <div class="product-desc__right">
+            <div class="product-color">
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+            </div>
+            <div class="product-btns">
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="swiper-container img-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="product-desc">
+          <div class="product-desc__left">
+            <p class="product__name">Great Hat 2021 for men</p>
+            <p class="product__price">$ 35</p>
+          </div>
+          <div class="product-desc__right">
+            <div class="product-color">
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+            </div>
+            <div class="product-btns">
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="swiper-container img-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="product-desc">
+          <div class="product-desc__left">
+            <p class="product__name">Great Hat 2021 for men</p>
+            <p class="product__price">$ 35</p>
+          </div>
+          <div class="product-desc__right">
+            <div class="product-color">
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+            </div>
+            <div class="product-btns">
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="swiper-container img-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="product-desc">
+          <div class="product-desc__left">
+            <p class="product__name">Great Hat 2021 for men</p>
+            <p class="product__price">$ 35</p>
+          </div>
+          <div class="product-desc__right">
+            <div class="product-color">
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+              <a href="#" class="product-color__item"></a>
+            </div>
+            <div class="product-btns">
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+
+  <!--#include virtual="/parts/copyright.html" -->
+
+</main>
 
 <!--#include virtual="/parts/footer.html" -->
