--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -17,11 +17,11 @@
 <body>
   <div class="page">
     <header class="header">
-      <a href="#" class="brand">Me<span class="accent">g</span></a>
+      <a href="index.html" class="brand">Me<span class="accent">g</span></a>
       <a href="#" class="cart"><img src="images/dist/cart.svg" alt="cart-icon" class="cart__img"></a>
       <ul class="menu">
-        <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">About</a></li>
+        <li class="menu__item"><a href="store.html" class="menu__link">Shop</a></li>
+        <li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
         <li class="menu__item">
           <a href="#" class="hamburger">
             <span></span>
