--- a/app/store.html
+++ b/app/store.html
@@ -32,31 +32,31 @@
     </div>
   </div>
 
-  <div class="swiper-container product">
+  <div class="swiper-container products">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="swiper-container img-slider">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
-        <div class="product-desc">
-          <div class="product-desc__left">
-            <p class="product__name">Great Hat 2021 for men</p>
-            <p class="product__price">$ 35</p>
+        <div class="products-desc">
+          <div class="products-desc__left">
+            <p class="products__name">Great Hat 2021 for men</p>
+            <p class="products__price">$ 35</p>
           </div>
-          <div class="product-desc__right">
-            <div class="product-color">
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
+          <div class="products-desc__right">
+            <div class="products-color">
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
             </div>
-            <div class="product-btns">
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            <div class="products-btns">
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
             </div>
           </div>
         </div>
@@ -64,26 +64,26 @@
       <div class="swiper-slide">
         <div class="swiper-container img-slider">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
-        <div class="product-desc">
-          <div class="product-desc__left">
-            <p class="product__name">Great Hat 2021 for men</p>
-            <p class="product__price">$ 35</p>
+        <div class="products-desc">
+          <div class="products-desc__left">
+            <p class="products__name">Great Hat 2021 for men</p>
+            <p class="products__price">$ 35</p>
           </div>
-          <div class="product-desc__right">
-            <div class="product-color">
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
+          <div class="products-desc__right">
+            <div class="products-color">
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
             </div>
-            <div class="product-btns">
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            <div class="products-btns">
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
             </div>
           </div>
         </div>
@@ -92,26 +92,26 @@
       <div class="swiper-slide">
         <div class="swiper-container img-slider">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
-        <div class="product-desc">
-          <div class="product-desc__left">
-            <p class="product__name">Great Hat 2021 for men</p>
-            <p class="product__price">$ 35</p>
+        <div class="products-desc">
+          <div class="products-desc__left">
+            <p class="products__name">Great Hat 2021 for men</p>
+            <p class="products__price">$ 35</p>
           </div>
-          <div class="product-desc__right">
-            <div class="product-color">
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
+          <div class="products-desc__right">
+            <div class="products-color">
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
             </div>
-            <div class="product-btns">
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            <div class="products-btns">
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
             </div>
           </div>
         </div>
@@ -119,26 +119,26 @@
       <div class="swiper-slide">
         <div class="swiper-container img-slider">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
-        <div class="product-desc">
-          <div class="product-desc__left">
-            <p class="product__name">Great Hat 2021 for men</p>
-            <p class="product__price">$ 35</p>
+        <div class="products-desc">
+          <div class="products-desc__left">
+            <p class="products__name">Great Hat 2021 for men</p>
+            <p class="products__price">$ 35</p>
           </div>
-          <div class="product-desc__right">
-            <div class="product-color">
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
+          <div class="products-desc__right">
+            <div class="products-color">
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
             </div>
-            <div class="product-btns">
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            <div class="products-btns">
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
             </div>
           </div>
         </div>
@@ -146,26 +146,26 @@
       <div class="swiper-slide">
         <div class="swiper-container img-slider">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
-        <div class="product-desc">
-          <div class="product-desc__left">
-            <p class="product__name">Great Hat 2021 for men</p>
-            <p class="product__price">$ 35</p>
+        <div class="products-desc">
+          <div class="products-desc__left">
+            <p class="products__name">Great Hat 2021 for men</p>
+            <p class="products__price">$ 35</p>
           </div>
-          <div class="product-desc__right">
-            <div class="product-color">
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
+          <div class="products-desc__right">
+            <div class="products-color">
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
             </div>
-            <div class="product-btns">
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            <div class="products-btns">
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
             </div>
           </div>
         </div>
@@ -173,26 +173,26 @@
       <div class="swiper-slide">
         <div class="swiper-container img-slider">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
-            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="product" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
+            <div class="swiper-slide"><img src="images/dist/hat-1.png" alt="products" class="img-slider__img"></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
-        <div class="product-desc">
-          <div class="product-desc__left">
-            <p class="product__name">Great Hat 2021 for men</p>
-            <p class="product__price">$ 35</p>
+        <div class="products-desc">
+          <div class="products-desc__left">
+            <p class="products__name">Great Hat 2021 for men</p>
+            <p class="products__price">$ 35</p>
           </div>
-          <div class="product-desc__right">
-            <div class="product-color">
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
-              <a href="#" class="product-color__item"></a>
+          <div class="products-desc__right">
+            <div class="products-color">
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
+              <a href="#" class="products-color__item"></a>
             </div>
-            <div class="product-btns">
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
-              <a href="#" class="btn product-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
+            <div class="products-btns">
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/like.svg"/></a>
+              <a href="#" class="btn products-btns__item"><img class="svg" src="images/dist/add.svg"/></a>
             </div>
           </div>
         </div>
