--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,7 @@
 
 <main class="main">
 
-  <div class="main-top">
-    <div class="search-form">
-      <input type="text" class="myInput search-form__input" placeholder="Search anything...">
-      <button><img src="images/dist/search.svg" alt="search-icon"></button>
-    </div>
-  </div>
+  <!--#include virtual="/parts/search-form.html" -->
 
   <div class='tabs'>
     <ul class="tab-btns">
@@ -29,9 +24,9 @@
         <li class="content__item">
           <div class="product">
             <img src="images/dist/shoes1-1.png" alt="product" class="product__img">
-            <div class="product__title">Trend Shoes New 2021</div>
+            <div class="product__title heading-h1">Trend Shoes New 2021</div>
             <div class="product__desc">Class aptent taciti sociosqu ad litora, torquent per conubia nostra per inceptos himenaeos.</div>
-            <a href="" class="btn product__btn">View Collection</a>
+            <a href="" class="btn btn-large product__btn">View Collection</a>
           </div>
         </li>
 
@@ -61,9 +56,9 @@
         <li class="content__item">
           <div class="product">
             <img src="images/dist/shoes2-1.png" alt="product" class="product__img">
-            <div class="product__title">Trend Shoes New 2021</div>
+            <div class="product__title heading-h1">Trend Shoes New 2021</div>
             <div class="product__desc">Class aptent taciti sociosqu ad litora, torquent per conubia nostra per inceptos himenaeos.</div>
-            <a href="" class="btn">View Collection</a>
+            <a href="" class="btn btn-large product__btn">View Collection</a>
           </div>
         </li>
 
