--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -18,9 +18,9 @@
   <div class="page">
     <header class="header">
       <a href="index.html" class="brand">Me<span class="accent">g</span></a>
-      <a href="#" class="cart"><img src="images/dist/cart.svg" alt="cart-icon" class="cart__img"></a>
-      <ul class="menu">
-        <li class="menu__item"><a href="store.html" class="menu__link">Shop</a></li>
+      <a href="#" class="btn btn-square cart"><img src="images/dist/cart.svg" alt="cart-icon" class="cart__img"></a>
+      <ul class="menu header-menu">
+        <li class="menu__item"><a href="store.html" class="menu__link">Store</a></li>
         <li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
         <li class="menu__item">
           <a href="#" class="hamburger">
@@ -30,5 +30,5 @@
           </a>
         </li>
       </ul>
-      <a href="#" class="user"><img src="images/dist/user2.jpg" alt="user-icon" class="user__img"></a>
+      <a href="#" class="btn btn-square user"><img src="images/dist/user2.jpg" alt="user-icon" class="user__img"></a>
     </header>
