--- a/app/store.html
+++ b/app/store.html
@@ -4,7 +4,7 @@
 
   <div class="main-top">
     <div class="main-top__left">
-      <h1 class="main-top__title">Store</h1>
+      <h1 class="heading-h2">Store</h1>
       <ul class="menu main-top__menu">
         <li class="menu__item"><a href="#" class="menu__link">All</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Men</a></li>
@@ -198,7 +198,6 @@
         </div>
       </div>
     </div>
-    <div class="swiper-pagination"></div>
   </div>
 
   <!--#include virtual="/parts/copyright.html" -->
