--- a/app/about.html
+++ b/app/about.html
@@ -2,19 +2,14 @@
 
 <div class="main">
 
-  <div class="main-top">
-    <div class="search-form">
-      <input type="text" class="myInput search-form__input" placeholder="Search anything...">
-      <button><img src="images/dist/search.svg" alt="search-icon"></button>
-    </div>
-  </div>
+  <!--#include virtual="/parts/search-form.html" -->
 
   <ul class="content about-content">
     <li class="content__item about-content__left">
       <p class="about-content__left_title">An Unique Minimal Shop Store That Suits Your Needs. Products by the world’s top designers.</p>
       <p class="about-content__left_text">Lorem ipsum dolor sit amet, consectetur urna adipiscing elit, sed do eiusmod tempor eget commodo viverra maecenas accumsan lacus vel. Vestibulum imperdiet nibh vel magna lacinia ultrices. Sed id interdum urna. Nam ac elit a ante commodo tristique.</p>
       <p class="about-content__left_text">Per inceptos himenaeos. Suspendisse faucibus sed dolor eget posuere interdum urna. Nam ac elit a ante commodo tristique.</p>
-      <a href="#" class="btn btn-small about-content__left_btn">Go to Shop</a>
+      <a href="#" class="btn about-content__left_btn">Go to Shop</a>
     </li>
     <li class="content__item about-content__center">
       <p class="about-content__center_title">About Meg Accessories Store</p>
@@ -28,7 +23,7 @@
         <input type="text" class="myInput contact-form__input" placeholder="Your Name">
         <input type="email" class="myInput contact-form__input" placeholder="Email">
         <textarea class="contact-form__textarea" placeholder="Message"></textarea>
-        <button class="btn btn-small contact-form__btn">Sent</button>
+        <button class="btn contact-form__btn">Sent</button>
       </div>
     </li>
   </ul>
