--- a/app/about.html
+++ b/app/about.html
@@ -1,6 +1,6 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="main">
+<main class="main main-bg-2">
 
   <!--#include virtual="/parts/search-form.html" -->
 
@@ -30,6 +30,6 @@
 
   <!--#include virtual="/parts/copyright.html" -->
 
-</div>
+</main>
 
 <!--#include virtual="/parts/footer.html" -->
