--- a/app/cart-empty.html
+++ b/app/cart-empty.html
@@ -1,13 +1,13 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="main section cart-empty">
+<main class="main main-bg-1 cart-empty">
 
   <!--#include virtual="/parts/search-form.html" -->
 
-  <div class="content section-content">
-    <div class="section-inner-s">
+  <div class="content content-s">
+    <div class="section section-s">
       <img src="images/dist/cart-empty-img.png" alt="cart" class="sign__img">
-      <p class="section__title sign__title heading-h2">The cart is empty</p>
+      <h1 class="sign__title heading-h2">The cart is empty</h1>
       <p class="sign__text">Please take a look around and choose for you the best products</p>
       <a href="#" class="btn">Go to shop</a>
     </div>
@@ -15,6 +15,6 @@
 
   <!--#include virtual="/parts/copyright.html" -->
 
-</div>
+</main>
 
 <!--#include virtual="/parts/footer.html" -->
