--- a/app/settings.html
+++ b/app/settings.html
@@ -1,12 +1,12 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="main section">
+<main class="main main-bg-1">
 
   <!--#include virtual="/parts/search-form.html" -->
 
-  <div class="content section-content">
-    <div class="section-inner-l">
-      <h1 class="section__title settings__title heading-h2">Profile Setting</h1>
+  <div class="content content-s">
+    <div class="section section-l">
+      <h1 class="settings__title heading-h2">Profile Setting</h1>
     
       <div class="user-form">
         <div class="user-form__name_wrap">
@@ -22,7 +22,7 @@
         </label>
         <label class="form-label">
           <span class="form-label_span">Phone</span>
-          <input type="number" class="myInput form-label_input" placeholder="939493 2320">
+          <input type="tel" class="myInput form-label_input phone-mask" placeholder="123 456 78 90">
         </label>
         <label class="form-label">
           <span class="form-label_span">Password</span>
@@ -36,7 +36,7 @@
           <span class="form-label_span">Address</span>
           <input type="text" class="myInput form-label_input" placeholder="004 Riley Street, 2050 Sydney ...">
         </label>
-        <div class="user-form__btn_wrap">
+        <div class="form-btn-wrap">
           <button class="btn btn-accent">Save Profile</button>
         </div>
       </div>
@@ -45,6 +45,6 @@
 
   <!--#include virtual="/parts/copyright.html" -->
 
-</div>
+</main>
 
 <!--#include virtual="/parts/footer.html" -->
