--- a/app/sign-up.html
+++ b/app/sign-up.html
@@ -1,13 +1,13 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="main section sign-in">
+<main class="main main-bg-1 sign-in">
 
   <!--#include virtual="/parts/search-form.html" -->
 
-  <div class="content section-content">
-    <div class="section-inner-s">
+  <div class="content content-s">
+    <div class="section section-s">
       <img src="images/dist/sign-up-img.png" alt="sign-in" class="sign__img">
-      <p class="section__title sign__title heading-h2">Sign Up</p>
+      <h1 class="sign__title heading-h2">Sign Up</h1>
       <div class="sign-form">
         <input type="text" class="myInput sign-form__input" placeholder="Your Name">
         <input type="email" class="myInput sign-form__input" placeholder="Your Email">
@@ -20,12 +20,12 @@
         <a href="#" class="social-btns__item"><i class="fab fa-facebook"></i></a>
         <a href="#" class="social-btns__item"><i class="fab fa-twitter"></i></a>
       </div>
-      <p class="sign__text">Aready a Member? <a href="#" class="accent">Sign Up</a></p>
+      <p class="sign__footer">Aready a Member? <a href="#" class="accent">Sign Up</a></p>
     </div>
   </div>
 
   <!--#include virtual="/parts/copyright.html" -->
 
-</div>
+</main>
 
 <!--#include virtual="/parts/footer.html" -->
