--- a/app/store.html
+++ b/app/store.html
@@ -11,6 +11,16 @@
         <li class="menu__item"><a href="#" class="menu__link">Women</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Kids</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Other</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">Other</a></li>
+        <li class="menu__item"><a href="sign-in.html" class="menu__link">Sign In</a></li>
+        <li class="menu__item"><a href="sign-up.html" class="menu__link">Sign Up</a></li>
+        <li class="menu__item"><a href="cart-empty.html" class="menu__link">Cart Em</a></li>
+        <li class="menu__item"><a href="shoping-cart.html" class="menu__link">Cart Sh</a></li>
+        <li class="menu__item"><a href="settings.html" class="menu__link">Accout</a></li>
+        <li class="menu__item"><a href="my-wallet.html" class="menu__link">Wallet</a></li>
+        <li class="menu__item"><a href="order.html" class="menu__link">Order</a></li>
+        <li class="menu__item"><a href="complete-order.html" class="menu__link">Order Co</a></li>
+        <li class="menu__item"><a href="product-detalis.html" class="menu__link">Detalis</a></li>
       </ul>
     </div>
     <div class="search-form">
