--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
           </ul>
         </li>
 
-        <li class="content__item">
+        <li class="content__item main-content__center">
           <div class="product">
             <img src="images/dist/shoes1-1.png" alt="product" class="product__img">
             <div class="product__title heading-h1">Trend Shoes New 2021</div>
