--- a/app/shoping-cart.html
+++ b/app/shoping-cart.html
@@ -12,21 +12,31 @@
         <li class="shopingcart__item">
           <div class="shopingcart-product">
             <img src="images/dist/cart-product-1.png" alt="shopingcart-product" class="shopingcart-product__img">
-            <p class="shopingcart-product__name">White shoes new for men</p>
-            <p class="shopingcart-product__price">$35</p>
-            <div class="shopingcart-product__settings">
-              <div class="counter">
-                <button class="counter-rem">-</button>
-                <input type="text" class="counter-input" value="2">
-                <button class="counter-add">+</button>
+
+            <div class="">
+              <p class="shopingcart-product__name">White shoes new for men</p>
+              <p class="shopingcart-product__price">$35</p>
+              <div class="shopingcart-product__settings">
+                <div class="counter">
+                  <button class="counter-rem">-</button>
+                  <input type="text" class="counter-input" value="2">
+                  <button class="counter-add">+</button>
+                </div>
+                <ul class="color-list color-list-m">
+                  <li class="color-list__item">
+                    <input type="checkbox" name="" id="color-1-1" class="color-list__checkbox">
+                    <label for="color-1-1" class="color-list__label color-3"></label>
+                  </li>
+                  <li class="color-list__item">
+                    <input type="checkbox" name="" id="color-1-2" class="color-list__checkbox">
+                    <label for="color-1-2" class="color-list__label color-5"></label>
+                  </li>
+                </ul>
+                <a href="#" class="shopingcart-product__size">S</a>
+                <a href="#" class="shopingcart-product__rem"><img src="images/dist/icon-delete.svg" alt="delete-icon" class="svg"></a>
               </div>
-              <div class="products-color">
-                <a href="#" class="products-color__item"></a>
-                <a href="#" class="products-color__item"></a>
-              </div>
-              <a href="#" class="shopingcart-product__size">S</a>
-              <a href="#" class="shopingcart-product__rem"><img src="images/dist/icon-delete.svg" alt="delete-icon" class="svg"></a>
             </div>
+
           </div>
         </li>
         <li class="shopingcart__item">
@@ -40,10 +50,16 @@
                 <input type="text" class="counter-input" value="2">
                 <button class="counter-add">+</button>
               </div>
-              <div class="products-color">
-                <a href="#" class="products-color__item"></a>
-                <a href="#" class="products-color__item"></a>
-              </div>
+              <ul class="color-list color-list-m">
+                <li class="color-list__item">
+                  <input type="checkbox" name="" id="color-2-1" class="color-list__checkbox">
+                  <label for="color-2-1" class="color-list__label color-3"></label>
+                </li>
+                <li class="color-list__item">
+                  <input type="checkbox" name="" id="color-2-2" class="color-list__checkbox">
+                  <label for="color-2-2" class="color-list__label color-5"></label>
+                </li>
+              </ul>
               <a href="#" class="shopingcart-product__size">S</a>
               <a href="#" class="shopingcart-product__rem"><img src="images/dist/icon-delete.svg" alt="delete-icon" class="svg"></a>
             </div>
